Everything fixed. Remove button works. linked with firebase

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "noteherder",
-  "homepage": "http://xtbc.github.io/noteherder",
+  "homepage": "http://rickbrainerd12.github.io/noteherder",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
